; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ralink/rt2x00/extr_rt2800lib.c_rt2800_config_wcid_attr_bssidx.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ralink/rt2x00/extr_rt2800lib.c_rt2800_config_wcid_attr_bssidx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rt2x00_dev = type { i32 }

@MAC_WCID_ATTRIBUTE_BSS_IDX = common dso_local global i32 0, align 4
@MAC_WCID_ATTRIBUTE_BSS_IDX_EXT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rt2x00_dev*, i32, i32)* @rt2800_config_wcid_attr_bssidx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rt2800_config_wcid_attr_bssidx(%struct.rt2x00_dev* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.rt2x00_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.rt2x00_dev* %0, %struct.rt2x00_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @MAC_WCID_ATTR_ENTRY(i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %4, align 8
  %12 = load i32, i32* %7, align 4
  %13 = call i32 @rt2800_register_read(%struct.rt2x00_dev* %11, i32 %12)
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* @MAC_WCID_ATTRIBUTE_BSS_IDX, align 4
  %15 = load i32, i32* %6, align 4
  %16 = and i32 %15, 7
  %17 = call i32 @rt2x00_set_field32(i32* %8, i32 %14, i32 %16)
  %18 = load i32, i32* @MAC_WCID_ATTRIBUTE_BSS_IDX_EXT, align 4
  %19 = load i32, i32* %6, align 4
  %20 = and i32 %19, 8
  %21 = ashr i32 %20, 3
  %22 = call i32 @rt2x00_set_field32(i32* %8, i32 %18, i32 %21)
  %23 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %4, align 8
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @rt2800_register_write(%struct.rt2x00_dev* %23, i32 %24, i32 %25)
  ret void
}

declare dso_local i32 @MAC_WCID_ATTR_ENTRY(i32) #1

declare dso_local i32 @rt2800_register_read(%struct.rt2x00_dev*, i32) #1

declare dso_local i32 @rt2x00_set_field32(i32*, i32, i32) #1

declare dso_local i32 @rt2800_register_write(%struct.rt2x00_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
